--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node src/Bd/Server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node server.js",
+    "server": "node src/Bd/Server.js",
     "dev": "concurrently \"npm run server\" \"npm start\""
   },
   "eslintConfig": {
